...
            android:shadowRadius="2"
            android:shadowColor="@android:color/black"
            android:layout_marginBottom="30dp"/>

        <!-- Create Account Title -->
        <TextView
            android:id="@+id/CreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create account"
            android:textStyle="bold"
            android:textSize="25sp"
            android:paddingTop="10dp"
            android:layout_marginBottom="30dp"/>

        <!-- Input Fields -->
...
